# rssfeed-agent

./: CLAUDE.md  README.md  pyproject.toml
specs/001-rss-feed-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rss-feed-agent/checklists/: requirements.md
specs/001-rss-feed-agent/contracts/: tools.md
src/rssfeed_agent/: __init__.py  __main__.py  agent.py  database.py  feed_parser.py  models.py  poller.py  tools.py
tests/: conftest.py
