[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rssfeed-agent"
version = "0.1.0"
description = "A chat-based conversational RSS feed agent powered by LangGraph and Anthropic"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "feedparser>=6.0.0",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rssfeed_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["rssfeed_agent"]
